--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,6 @@
 		<module>spring-cloud-producer</module>
 		<module>spring-cloud-consumer</module>
 		<module>spring-cloud-turbine</module>
+		<module>spring-cloud-config</module>
 	</modules>
 </project>
