--- a/spring-cloud-config/pom.xml
+++ b/spring-cloud-config/pom.xml
@@ -9,7 +9,7 @@
 	<version>1.0</version>
 	<name>spring-cloud-config</name>
 	<url>http://maven.apache.org</url>
-	<description>Demo project for Spring cloud turbine</description>
+	<description>Demo project for Spring cloud config</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -30,7 +30,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jgit</groupId>
+			<artifactId>org.eclipse.jgit</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
