--- a/spring-cloud-config/src/main/resources/application.yml
+++ b/spring-cloud-config/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8001
+  port: 8200
 spring:
   application:
-    name: spring-cloud-config-server
+    name: spring-cloud-config
   cloud:
     config:
       server:
@@ -11,3 +11,7 @@ spring:
           search-paths: config                                # git仓库地址下的相对地址，可以配置多个，用,分割。
           username: 1216535@qq.com                            # git仓库的账号
           password: fanxia520                                 # git仓库的密码
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8000/eureka/   ## 注册中心eurka地址
