--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
 		<module>spring-cloud-consumer</module>
 		<module>spring-cloud-turbine</module>
 		<module>spring-cloud-config</module>
+		<module>spring-cloud-zuul</module>
 	</modules>
 </project>
