--- a/spring-cloud-zuul/src/main/resources/application.yml
+++ b/spring-cloud-zuul/src/main/resources/application.yml
@@ -14,3 +14,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8000/eureka/
+#是否开启重试功能
+zuul: 
+  retryable: true
+#对当前服务的重试次数
+ribbon:
+  MaxAutoRetries: 2
+#切换相同Server的次数
+  MaxAutoRetriesNextServer: 0
