新增链路跟踪

--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,6 @@
 		<module>spring-cloud-turbine</module>
 		<module>spring-cloud-config</module>
 		<module>spring-cloud-zuul</module>
+		<module>spring-cloud-zipkin</module>
 	</modules>
 </project>
