--- a/spring-cloud-zipkin/pom.xml
+++ b/spring-cloud-zipkin/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cn.com.micro</groupId>
-	<artifactId>spring-cloud-producer</artifactId>
+	<artifactId>spring-cloud-zipkin</artifactId>
 	<version>1.0</version>
-	<name>spring-cloud-producer</name>
+	<name>spring-cloud-zipkin</name>
 	<url>http://maven.apache.org</url>
-	<description>Demo project for Spring cloud producer</description>
+	<description>Demo project for Spring cloud zipkin</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -26,34 +26,19 @@
 	</properties>
 
 	<dependencies>
-		<!-- spring cloud config -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>
-
-		<!-- actuator -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-
-		<!-- spring cloud bus -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
-		</dependency>
-		
-		<!-- eureka -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
-		
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zipkin</artifactId>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-server</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-autoconfigure-ui</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -69,7 +54,7 @@
 	</dependencyManagement>
 
 	<build>
-		<finalName>spring-cloud-producer</finalName>
+		<finalName>spring-cloud-zipkin</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
