--- a/spring-cloud-zipkin/src/main/resources/application.yml
+++ b/spring-cloud-zipkin/src/main/resources/application.yml
@@ -4,21 +4,13 @@ spring:
 ---     
 spring: 
   application:
-    name: spring-cloud-consumer
+    name: spring-cloud-zipkin
   profiles: dev
-  zipkin:
-    base-url: http://localhost:8300
-  sleuth:
-    sampler:
-      percentage: 1.0
+  
 server:
-  port: 9100
+  port: 8300
   
 eureka: 
   client:
     serviceUrl:
       defaultZone: http://localhost:8000/eureka/
-      
-feign: 
-  hystrix: 
-    enabled: true
