--- a/spring-cloud-zuul/src/main/resources/application.yml
+++ b/spring-cloud-zuul/src/main/resources/application.yml
@@ -6,7 +6,11 @@ spring:
   application:
     name: spring-cloud-zuul
   profiles: dev
-  
+  zipkin:
+    base-url: http://localhost:8300
+  sleuth:
+    sampler:
+      percentage: 1.0
 server:
   port: 8888
   
