--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cn.com.micro</groupId>
+	<groupId>cn.com.lisz</groupId>
 	<artifactId>spring-cloud</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
