--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,12 @@
 	</build>
 
 	<modules>
+		<module>spring-cloud-common</module>
 		<module>spring-cloud-eureka</module>
 		<module>spring-cloud-producer</module>
+		<module>spring-cloud-producer-base</module>
 		<module>spring-cloud-consumer</module>
+		<module>spring-cloud-consumer-admin</module>
 		<module>spring-cloud-turbine</module>
 		<module>spring-cloud-config</module>
 		<module>spring-cloud-zuul</module>
