--- a/spring-cloud-zuul/src/main/resources/application.yml
+++ b/spring-cloud-zuul/src/main/resources/application.yml
@@ -21,7 +21,6 @@ eureka:
 
 # 构建路由地址
 zuul:
-  prefix: /apis
   #忽略真实服务名称
   ignored-services: spring-cloud-*
   routes:
@@ -40,4 +39,4 @@ ribbon:
   MaxAutoRetriesNextServer: 0
 management:
   security:
-    enabled: true # 默认为true，改为false以便可以看到routes
+    enabled: false # 默认为true，改为false以便可以看到routes
