--- a/spring-cloud-consumer-oauth/pom.xml
+++ b/spring-cloud-consumer-oauth/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cn.com.lisz</groupId>
-	<artifactId>spring-cloud-consumer</artifactId>
+	<artifactId>spring-cloud-consumer-oauth</artifactId>
 	<version>1.0</version>
-	<name>spring-cloud-consumer</name>
+	<name>spring-cloud-consumer-oauth</name>
 	<url>http://maven.apache.org</url>
-	<description>消费者示例</description>
+	<description>消费者-认证模块</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -27,6 +27,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>cn.com.lisz</groupId>
+			<artifactId>spring-cloud-common</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
@@ -42,19 +47,30 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- security oauth2 start -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+		</dependency>
+		<!-- security oauth2 end -->
+		<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.49</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -70,7 +86,7 @@
 	</dependencyManagement>
 
 	<build>
-		<finalName>spring-cloud-consumer</finalName>
+		<finalName>spring-cloud-consumer-oauth</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
