--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
 	<modules>
 		<module>spring-cloud-common</module>
+		<module>spring-cloud-common-oauth</module>
 		<module>spring-cloud-eureka</module>
 		<module>spring-cloud-producer-base</module>
 		<module>spring-cloud-consumer-admin</module>
