--- a/spring-cloud-consumer-admin/src/main/resources/application.yml
+++ b/spring-cloud-consumer-admin/src/main/resources/application.yml
@@ -23,7 +23,26 @@ eureka:
   #hystrix: 
     #enabled: false
 swagger: 
+  # 公共信息
+  enabled: true
+  title: 后台管理业务模块
+  description: 包含常用基础模块，用户管理、角色管理、权限管理、字典管理等
+  version: 1.0
+  # 许可证及服务条款信息
+  license:
+  licenseUrl:
+  termsOfServiceUrl:
+  contact:
+    name: lisz
+    url:
+    email: 1216535@qq.com
   base-package: cn.com.lisz.consumer.admin.controller
+  # 鉴权策略ID，对应 SecurityReferences ID
+  authorization: 
+    name: Authorization
+    # 鉴权传递的Header参数
+    key-name: Authorization
+  
 security: 
   oauth2: 
     resource: 
