--- a/spring-cloud-consumer-admin/src/main/resources/application.yml
+++ b/spring-cloud-consumer-admin/src/main/resources/application.yml
@@ -1,27 +1,25 @@
-spring:
-    profiles:
-        active: dev
----     
-spring: 
-  application:
-    name: spring-cloud-consumer-admin
-  profiles: dev
-  #zipkin:
-    #base-url: http://localhost:8300
-  #sleuth:
-    #sampler:
-      #percentage: 1.0
 server:
   port: 9100
   
+spring:
+  application:
+    name: spring-cloud-consumer-admin
+  profiles:
+    active: dev
+    
 eureka: 
   client:
     serviceUrl:
-      defaultZone: http://localhost:8000/eureka/
-      
-#feign: 
-  #hystrix: 
-    #enabled: false
+      defaultZone: http://${eureka.instance.hostname}:${cloud.server.port}/eureka  
+    
+# 认证
+auth:
+  secret: 212520
+security: 
+  oauth2: 
+    resource: 
+      token-info-uri: http://${cloud.oauth2.hostname}:${cloud.oauth2.port}/oauth/check_token
+
 swagger: 
   # 公共信息
   enabled: true
@@ -42,8 +40,68 @@ swagger:
     name: Authorization
     # 鉴权传递的Header参数
     key-name: Authorization
+      
+# log
+logging: 
+  level: 
+    com: 
+      netflix: 
+        eureka: OFF
+        discovery: OFF
+  file: ./logs/${spring.application.name}.log   
+---     
+spring: 
+  profiles: dev
   
-security: 
+# cloud
+cloud: 
+  server: 
+    port: 8000
+  #认证中心配置
   oauth2: 
-    resource: 
-      token-info-uri: http://localhost:10000/oauth/check_token
+    hostname: localhost
+    port: 10000
+eureka: 
+  instance: 
+    # 注册中心地址
+    hostname: localhost
+    # 服务部署地址
+    ip-address: 127.0.0.1
+
+logging: 
+  level: 
+    root: INFO
+---     
+spring: 
+  profiles: prod 
+  
+# cloud
+cloud: 
+  server: 
+    port: 8000
+  #认证中心配置
+  oauth2: 
+    hostname: localhost
+    port: 10000
+eureka: 
+  instance: 
+    # 注册中心地址
+    hostname: localhost
+    # 服务部署地址
+    ip-address: 127.0.0.1
+    
+logging: 
+  level: 
+    root: WARN  
+--- 
+#spring:  
+  #zipkin:
+    #base-url: http://localhost:8300
+  #sleuth:
+    #sampler:
+      #percentage: 1.0
+      
+#feign: 
+  #hystrix: 
+    #enabled: false
+  
