--- a/spring-cloud-consumer-admin/pom.xml
+++ b/spring-cloud-consumer-admin/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>spring-cloud-consumer-admin</artifactId>
 	
 	<name>spring-cloud-consumer-admin</name>
-	<description>消费者-后台管理</description>
+	<description>消费者-管理中心</description>
 
 	<parent>
 		<groupId>cn.com.lisz</groupId>
