--- a/spring-cloud-producer-base/src/main/resources/application.yml
+++ b/spring-cloud-producer-base/src/main/resources/application.yml
@@ -36,7 +36,13 @@ spring:
       stat-view-servlet: #访问监控网页的登录用户名和密码
         login-username: druid
         login-password: druid
- 
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties: 
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 # cloud
 cloud: 
   server: 
