--- a/spring-cloud-producer-base/src/main/resources/application.yml
+++ b/spring-cloud-producer-base/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
         login-password: druid
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties: 
       hibernate:
