--- a/spring-cloud-consumer-admin/src/main/resources/application.yml
+++ b/spring-cloud-consumer-admin/src/main/resources/application.yml
@@ -10,8 +10,23 @@ spring:
 eureka: 
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${cloud.server.port}/eureka  
-    
+      defaultZone: http://${eureka.instance.hostname}:${cloud.server.port}/eureka
+      
+#hystrix的超时时间
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 30000
+#ribbon的超时时间
+ribbon:
+  ReadTimeout: 30000
+  ConnectTimeout: 30000
+ 
 # 认证
 auth:
   secret: 212520
