--- a/spring-cloud-producer-base/src/main/resources/application.yml
+++ b/spring-cloud-producer-base/src/main/resources/application.yml
@@ -39,6 +39,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      #ddl-auto: create-drop
     show-sql: true
     properties: 
       hibernate:
