--- a/spring-cloud-consumer-oauth/src/main/resources/application.yml
+++ b/spring-cloud-consumer-oauth/src/main/resources/application.yml
@@ -12,6 +12,21 @@ eureka:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${cloud.server.port}/eureka
 
+#hystrix的超时时间
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 30000
+#ribbon的超时时间
+ribbon:
+  ReadTimeout: 30000
+  ConnectTimeout: 30000
+  
 # 认证
 auth:
   secret: 212520
