--- a/consumer/spring-cloud-consumer-oauth/src/main/resources/application.yml
+++ b/consumer/spring-cloud-consumer-oauth/src/main/resources/application.yml
@@ -61,6 +61,16 @@ eureka:
 logging: 
   level: 
     root: INFO
+    
+feign: 
+  hystrix: 
+    enabled: true
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
 ---     
 spring: 
   profiles: prod
@@ -87,8 +97,3 @@ logging:
   #sleuth:
     #sampler:
       #percentage: 1.0
-      
-#feign: 
-  #hystrix: 
-    #enabled: false
-  
