配置链路跟踪访问

--- a/consumer/spring-cloud-consumer-oauth/src/main/resources/application.yml
+++ b/consumer/spring-cloud-consumer-oauth/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: spring-cloud-consumer-oauth
   profiles:
-    active: dev
+    active: prod
     
 eureka: 
   client:
@@ -46,7 +46,7 @@ logging:
 ---     
 spring: 
   profiles: dev
-  
+        
 # cloud
 cloud: 
   server: 
@@ -62,19 +62,15 @@ logging:
   level: 
     root: INFO
     
-feign: 
-  hystrix: 
-    enabled: true
-    
-management:
-  endpoints:
-    web:
-      exposure:
-        include: hystrix.stream
 ---     
 spring: 
   profiles: prod
-
+  zipkin:
+    base-url: http://localhost:8300
+  sleuth:
+    sampler:
+      percentage: 1.0
+      
 # cloud
 cloud: 
   server: 
@@ -86,14 +82,19 @@ eureka:
     # 服务部署地址
     ip-address: 127.0.0.1
     
+feign: 
+  hystrix: 
+    enabled: true
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
+        
 logging: 
   level: 
     root: WARN  
 ---   
 
-#spring: 
-  #zipkin:
-    #base-url: http://localhost:8300
-  #sleuth:
-    #sampler:
-      #percentage: 1.0
+
