--- a/consumer/spring-cloud-consumer-oauth/pom.xml
+++ b/consumer/spring-cloud-consumer-oauth/pom.xml
@@ -41,10 +41,10 @@
 		        <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 		</dependency>
 		<!-- 链路跟踪 -->
-		<!-- <dependency> 
+		<dependency> 
 			<groupId>org.springframework.cloud</groupId> 
 			<artifactId>spring-cloud-starter-zipkin</artifactId> 
-		</dependency> -->
+		</dependency>
 		<!-- security oauth2 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
