--- a/spring-cloud-zuul/pom.xml
+++ b/spring-cloud-zuul/pom.xml
@@ -28,10 +28,10 @@
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
-		</dependency> -->
+		</dependency>
 		<dependency>
 		    <groupId>com.spring4all</groupId>
 		    <artifactId>swagger-spring-boot-starter</artifactId>
