--- a/consumer/spring-cloud-consumer-admin/src/main/resources/application.yml
+++ b/consumer/spring-cloud-consumer-admin/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: spring-cloud-consumer-admin
   profiles:
-    active: prod
+    active: dev
     
 eureka: 
   client:
