--- a/producer/spring-cloud-producer-base/src/main/resources/application.yml
+++ b/producer/spring-cloud-producer-base/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: spring-cloud-producer-base
   profiles:
-    active: prod
+    active: dev
  
 eureka: 
   client:
