--- a/common/spring-cloud-common-producer/pom.xml
+++ b/common/spring-cloud-common-producer/pom.xml
@@ -4,10 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring-cloud-common-data</artifactId>
+	<artifactId>spring-cloud-common-producer</artifactId>
 
-	<name>spring-cloud-common-data</name>
-	<description>通用模块-数据</description>
+	<name>spring-cloud-common-producer</name>
+	<description>通用模块-生产者</description>
 
 	<parent>
 		<groupId>cn.com.lisz</groupId>
